Diploma text literature overview

--- a/main.tex
+++ b/main.tex
@@ -52,11 +52,22 @@ EPS& Encapsulated Postscript
 \Chapter{Введение}
 
 
-Рекомендуемый объем главы --- 1--2 стр.
-Во введении приводится  обоснование актуальности темы, формулировка основной цели работы, 
-краткое описание решенной задачи и научно-технического содержания.
-Кроме того, рекомендуется в явном виде описать структуру работы в соответсвии с 
-нижеприведенным образцом.
+С развитием автомобильной промышленности тестирование автомобильных систем стало неотъемлемой частью жизненного цикла разработки программного и аппаратного обеспечения. Современные автомобили включают множество встроенных систем для повышения уровня безопасности и комфорта водителей и пассажиров путем обеспечения функций, таких как адаптивный круиз-контроль, контроль давления в шине и др. 
+Функциональные проверки безопасности автомобильных систем на программном уровне включают: 
+
+•	Функциональное тестирование, с целью гарантировать, что программное обеспечение удовлетворяет требованиям высокого и низкого уровней.
+
+•	Анализ времени выполнения худшего сценария, для того чтобы гарантировать, что критические функции ПО выполняются достаточно быстро (такие как срабатывание подушек безопасности).
+
+•	Структурный анализ покрытия.
+
+Для качественного тестирования автомобильных систем необходимо хорошо понимать, как устроен автомобиль в целом и его составляющие по отдельности. Однако, преставления о системе у инженеров и менеджеров зачастую очень сильно расходятся. Взаимодействие тестировщика, заказчика, менеджера, бизнес-аналитика и разработчика является неотъемлемой частью гибкой методологии разработки (Agile software development). 
+
+В данной работе рассматривается проблема функционального тестирования ПО для автомобильных систем таким образом, чтобы тестовая документация была понятна всем участникам бизнес процесса. 
+
+Для достижения взаимопонимания между всеми участниками процесса была создана практика «разработка, основанная на функционировании» (behaviour-driven development – BDD). 
+
+В сфере автомобильных систем BDD подход мог бы сильно облегчить процесс разработки. 
 
 
 Работа организована следующим образом. В главе \ref{cReview} представлен 
@@ -73,12 +84,110 @@ EPS& Encapsulated Postscript
 Рекомендуемый объем главы "--- 10--15 стр. 
 Название главы должно отражать ее содержание, например ``Проблема вечного 
 двигателя''.
-\section{ Общественная/научная потребность решения задачи}
-\section{ Текущее состояние проблемы в России и за рубежом}
+\section{ Цель и задачи}
+Целью выпускной квалификационной работы является разработка domain specific языка для функционального тестирования автомобильных систем, который облегчит взаимодействие между тестировщиком, заказчиком, менеджером, аналитиками, разработчиками и предоставит функционал, необходимый для симуляции работы автомобильных сетей. Такой язык позволит достичь большего взаимопонимания между менеджерами, аналитиками и инженерами, что в свою очередь значительно упростит разработку ПО и повысит качество разрабатываемого продукта. 
+Для достижения поставленной цели следует выполнить ряд задач:
+
+•	Исследовать предметную область
+
+•	Выделить аналоги и сравнить их
+
+•	Разработать язык
+
+•	Реализовать язык
+
+•	Протестировать язык
+
+\section{ Обзор литературы}
 Раздел содержит обзор литературы по теме работы
-\section{Объект и методы исследования}
+
+В марте 2006 года Dan North предложил BDD методологию (behaviour-driven development), основанную на agile методологиях. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TTD). Идея DBB подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик и тестировщик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений. 
+В своей статье Dan North описал следующие BDD идеи:
+
+•	Название тестового метода должно быть предложением. В этом случае хорошо разработанная документация будет понятна и бизнес пользователям и инженерам. 
+
+•	Простой шаблон делает тестовые методы более определенными. 
+
+•	Выразительное название очень помогает, когда тест обрушился.
+
+•	Слово «поведение» более полезное, чем «тест».
+
+•	BDD предоставляет «общий язык» для анализа. 
+
+•	Приемочные критерии должны быть выполняемыми.
+
+Примерно в то же время Эрик Эванс опубликовал книгу «Проблемно-ориентированное проектирование», в которой описал набор принципов и схем, направленных на создание оптимальных систем объектов. Его идея заключается в том, что для бизнеса удобно смоделировать систему, в которой будет определен единый язык (Domain specific language), основанный на бизнес области, такой, что бизнес словарь смогут использовать как менеджеры так и инженеры.  
+
+Совместно Эрик Эванс и Dan North разработали шаблон для выявления приемочных критериев теста. Они разработали структуры тестовых сценариев, в которых каждый шаг определялся ключевым словом
+
+•	Given – дано начальное условие
+
+•	When – происходит событие
+
+•	Then – проверка, что получены некоторые результаты
+
+На основе вышеперечисленных принципов BDD был создан язык Gherkin – человеко-читаемый язык, используемый для описания поведения системы.
+
+С точки зрения автомобильной индустрии, в которых функциональное тестирование ПО подразумевает достаточно нетривиальную задачу данных подход сильно облегчает взаимодействие между всеми бизнес участниками. Однако не существует инструмента облегчающего разработку документации, а как следствия взаимопонимания между менеджерами и инженерами и, в то же время, учитывающего особенности данной сферы. 
+
+Возможность использовать единую всеми участниками модель предметной области позволяет значительно ускорить процесс проектирования ПО. Предметно-ориентированое программирование (Domain-driven design, DDD) основано на трех главных определениях:
+
+•	Область (англ. domain, домен) — предметная область, к которой применяется разрабатываемое программное обеспечение.
+
+•	Модель (англ. model) — описывает отдельные аспекты области и может быть использована для решения проблемы.
+
+•	Язык описания — используется для единого стиля описания домена и модели.
+
+Использование концепции моделирования системы с использованием единого языка, основанного на бизнес области таким образом, что словарь используется в разработке ПО может решить проблему взаимодействия участников бизнес процесса.
+
+В 2003 году была создана Автомобильная Открытая Системная Архитектура (AUTOSAR). Это открытая архитектура, которая стандартизирует архитектуры ПО для автомобильных ECU и жизненный цикл разработки. Все производители автомобильных систем на данный момент следуют стандартам AUTOSAR. Учитывая, что все системы стандартизированы, одну и ту же систему (например лидары для автомобилей марок Diamler и Audi) можно протестировать использую одни и те же инструменты. Однако, среди современных средств для тестирования программных систем нет средства, специализированного под специфические нужды автомобильной сферы, и при этом позволяющего разрабатывать спецификации на человеко-читаемом Gherkin языке.
+
+С расширением областей применения вычислительной техники возникла необходимость в новом виде языка— проблемно-ориентированном (domain-specific language, DSL), позволяющем в определенной области использовать специфичные обозначения и термины. Такие языки обеспечивают пользователям возможность коротко и четко сформулировать задачу и получить результаты в необходимой для них форме. 
+
+Хорошо разработанный DSL язык должен быть основан на следующих принципах (Debasish, G. 2011 DSLs in Action, Manning Publications):
+
+•	Язык зеркально отображает артефакты предметной области.
+
+•	Язык должен использовать общий словарь предметной области. Словарь становится катализатором для лучшей связи между разработчиками и бизнес-пользователями.
+
+•	Имплементация языка должна быть абстракцией. В язык не должно быть точных фрагментов имплементации языка. 
+
+Использование проблемно-ориентированный языка позволит решить проблему разработки тестовой документации понятной всем участникам бизнес процесса с учетом специфики автомобильной промышленности.
+
+
+
+\section{Анализ существующих инструментов для тестирования}
 Описание реального объекта исследования, используемых методов исследования,
 техническое и организационное  содержание работ.
+\subsection{Выделение критериев сравнения}
+Требования к разрабатываемой системе
+
+•	Архитектура тестов, разрабатываемых с помощью языка должны быть событийно-управляемая (Event based).  
+
+•	Direct access to signals, system variables and diagnostic parameters (?)
+
+•	Язык должен быть проблемно-ориентированным
+
+\subsection{Обзор аналогов}
+
+\begin{itemize}
+  \item CAPL (Communication Access Programming Language)
+Компания Vector, разрабатывающая программные инструменты для работы с коммуникационными сетями основывающихся на шинах CAN, LIN, FlexRay, Ethernet и др., используемыми в автомобильной промышленности создала программный пакет для разработчиков CANoe. Этот инструмент поддерживает симуляцию работы сетей, предоставляет диагностические инструменты и т.д. Данный пакет используется большинством OEM-производителей и поставщиков автомобильных компонентов. В среде CANoe есть возможность разрабатывать тестовые сценарии на языке CAPL (Communication Access Programming Language). 
+
+CAPL - процедурный язык, на котором выполнение блоков программы управляются событиями. Эти блоки программы упоминаются как событие процедуры.
+
+С помощью CAPL можно описать тесты, полностью покрывающие функциональные требования АС. Однако данный язык является Си подобным, достаточно трудным для понимания всеми участниками бизнес процесса. 
+
+  \item CCDL
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников. 
+
+\item Cucumber
+Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тестов используется Gherkin-нотация. Она определяет набор ключевых слов и структуру теста. Программная реализация шагов отделена от теста, что очень удобно для бизнеса. Однако для создания полной domain specific модели АС необходимо каждый раз заново реализовывать протокол коммуникации с тестовым оборудованием. 
+\end{itemize}
+
+\subsection{Результаты}
+Из вышеперечисленных инструментов для тестирования ПО видно, что ни один из них не удовлетворяет требованиям. Таким образом существует необходимость в создании domain specific языка для функционального тестирования, который объединит в себе принципы BDD и функционал, необходимый для симуляции работы сетей CAN, LIN, Ethernet. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта. 
+
 
 \section{    Уточненные требования к работе }
 Окончательная постановка задачи с явным отсечением лишнего 
@@ -131,7 +240,7 @@ EPS& Encapsulated Postscript
 
 
 \bibliographystyle{gost71s}
-\bibliography{bibliography}                              
+%\bibliography{bibliography}                              
 
 
 \end{document}
