theory of Lexer

--- a/main.tex
+++ b/main.tex
@@ -226,7 +226,61 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 
 Разрабатываемый язык описания сценариев тестирования автомобильных систем должен быть проблемно-ориентированным, при этом прост в использовании и изучении, а так же предоставлять возможность разрабатывать сценарии не только инженерами, но и бизнес-аналитиками. 
 
+
+\section{    Описание синтаксиса языка }
+Существуют три основных метода описания синтаксиса языков программирования: формальные грамматики, формы Бэкуса-Наура и диаграммы Вирта.
+
+Формальной грамматикой называется четверка вида:  G = (VT, VN, P, S), 
+
+где где VN - конечное множество нетерминальных символов грамматики,
+VT - множество терминальных символов грамматики 
+Р – множество правил вывода грамматики,
+S – начальный символ грамматики.
+
+Для записи правил вывода с одинаковыми левыми частями вида a-> b1, a->b2, ..., a->bn   используется сокращенная форма записи a-> b1|b2|...|bn.
+
+%БНФ
+
+Во второй половине 20-го века Джон Брэкус и Ноам Хомски независимо друг от друга создали форму записи, которая в последствии стала методом формального описания синтаксиса языков. 
+Форма Бэкуса-Наура (БНФ) – формальная система описания синтаксиса, используемая для описания контекстно-свободных грамматик, в которой одни синтаксические абсстракции последовательно определяются через другие абстракции. Для описания синтаксических структур форма БНФ исползует абстракции.  
+
+Форма БНФ является порождающим устройством для определения языков. С помощью последовательности правил создаются преждложения языка. Создание предложений называется выводом.
+Вывод должен начинаться с начального символа start symbol. Сентенциальная форма грамматики - это строка, которая может быть выведена из стартового символа. Предложение (сентенция) грамматики - это сентенциальная форма, состоящая только из терминальных символов. Язык L(G) грамматики - это множество всех ее предложений.  
+
+Метаязык, предложенный Бэкусом и Науром, использует следующие обозначения:
+\begin{itemize}
+\itemсимвол «::=» отделяет левую часть правила от правой (читается: «определяется как»);
+\itemнетерминалы обозначаются произвольной символьной строкой, заключенной в угловые скобки «<» и «>»;
+\itemтерминалы - это символы, используемые в описываемом языке;
+\itemправило может определять порождение нескольких альтернативных цепочек, отделяемых друг от друга символом вертикальной черты «|» (читается: «или»).
+\end{itemize}
+
+
+%РБНФ
+Из-за некоторых незначительных неудобств в БНФ Никлаус Вирт предложил свой вариант расширенной формы Бэкуса-Наура (РБНФ, расширенная Бэкус — Наурова форма). Эти расширения не увеличивают описательну силу БНФ, а упрощают чтение и использование такой формы.  
+
+Для повышения удобства и компактности описаний, в РБНФ вводятся следующие дополнительные конструкции (метасимволы):
+\begin{itemize}
+\itemквадратные скобки «[» и «]» означают, что заключенная в них синтаксическая конструкция может отсутствовать;
+\itemфигурные скобки «\{» и «\}» означают повторение заключенной в них синтаксической конструкции ноль или более раз;
+\itemсочетание фигурных скобок и косой черты «\{/» и «/\}» используется для обозначения повторения один и более раз;
+\itemкруглые скобки «(» и «)» используются для ограничения альтернативных конструкций.
+\end{itemize}
+
+%Диаграммы Вирта
+
+Синтаксическими графами называются ориентированные графы, на которых представляется информия о правилах форм БНФ и РБНФ. Так же их называют синтаксическими диаграммами или синтаксическими схемами.
+При построении диаграмм учитывают следующие правила:
+\begin{itemize}
+\itemкаждый графический элемент, соответствующий терминалу или нетерминалу, имеет по одному входу и выходу, которые обычно изображаются на противоположных сторонах;
+\itemкаждому правилу соответствует своя графическая диаграмма, на которой терминалы и нетерминалы соединяются посредством дуг;
+\itemальтернативы в правилах задаются ветвлением дуг, а итерации - их слиянием;
+\itemдолжна быть одна входная дуга (располагается обычно слева или сверху), задающая начало правила и помеченная именем определяемого нетерминала, и одна выходная, задающая его конец (обычно располагается справа и снизу);
+\itemстрелки на дугах диаграмм обычно не ставятся, а направления связей отслеживаются движением от начальной дуги в соответствии с плавными изгибами промежуточных дуг и ветвлений.
+\end{itemize}
+
 %Компилируемый или интерпретируемый?
+\section{Общая структура}
 Существует два главных вида языков программирования: компилируемый и интерпретируемый. 
 	Компилятор выясняет все, что должна выполнить программая, превращает иснтрукции в машинный код и сохраняет его, чтобы выполнить позже. 
 	Интрепретатор проходит всю программу строчку за строчкой и тут же выполняет.
@@ -235,44 +289,55 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 
 В случае разработки интерпретатора стадии разработки можно разбить на следующие этапы: 
 
-•	Лексический анализ – разбор исходного кода на токены. Этот этап выполняется лексером.
+\begin{itemize}
+\itemЛексический анализ – разбор исходного кода на токены. Этот этап выполняется лексером.
+\itemСинтаксический анализ – сбор токенов в абстрактное синтаксическое дерево (AST). Данный этап выполняется синтаксическим анализатором (парсером).
+\itemсемантический анализ;
+\itemИсполенение AST 
+\end{itemize}
 
-•	Синтаксический анализ – сбор токенов в абстрактное синтаксическое дерево (AST). Данный этап выполняется синтаксическим анализатором (парсером).
 
-•	Исполенение AST 
 
 Естественные языки и искусственные, вне зависимости от их происхождения, представляют собой совокупность строк, состоящих из символа некоторого алфавита. Предложения или утверждения – это строки, состоящие из символов языка. Какие именно утверждения существуют в языке определяют синтаксические правила. 
 
+\subsection {Лексичекий анализ}
 Первым шагом в разработке языков зачастую язвляется лексический анализ – процесс аналитического разбора входной последовательности символов на лексемы, с целью получения на выходе идентифицированных последовательностей, называемых токенами. Токен – это малая единица языка. Токен может быть именем переменной или функции, оператором или числом. 
 
 Предполагается, что лексер беред входную строку, содержащую файлы с исходным кодом на разрбатываемом языке и разделяет его на список токенов. Лексер может выполнять такие задачи, как удаление комментариев, определение чисел и т.д.
 
+ЛА необязательный этап, но желательный так как:
+
+1) замена идентификаторов, констант, ограничителей и служебных слов лексемами делает программу более удобной для дальнейшей обработки.
+
+2) Лексический анализатор уменьшает длину программы, устраняя из ее исходного представления комментарии и несущественные пробелы.
+
+3) если будет изменена кодировка в исходном представлении программы, то это отразится только на лексическом анализаторе.
+
+В процедурных языках лексемы обычно делятся на классы:  служебные слова и ограничители.
+
+
+Входные данные ЛА - текст транслируемой программы на входном языке.
+
+Выходные данные ЛА - файл лексем в числовом представлении. %TODO добавить листинг BddLexer.tokens
+
+
+
+
+
+\subsection {Синтаксический анализ}
+%синтаксический анализ
 Синтаксический анализ – это процесс сопоставления линейной последовательности лексем (слов, фраз) языка с его формальной грамматикой. Результатом обычно является синтаксическое дерево. Обычно применяется совместно с лексическим анализом. Синтаксический анализатор— это программа или часть программы, выполняющая синтаксический анализ, то есть распознавание входной информации. При этом входные данные преобразуются к виду, пригодному для дальнейшей обработки. Этот вид обычно представляет собой формальную модель входной информации на языке последующего процесса обработки информации.
 
 Во время парсинга входной текст преобразуется в стуктуру данных, которая отражает синтаксичекскую структуру входной последовательности и подходит для последующей обработки. Как правило синтаксическая структура представляется в виде дерева зависимостей. 
 
 Существуют следующие алгоритмы синтаксического анализа: 
-
-•	Нисходящий (англ. top-down) – это такой такой анализ, в котором продукции грамматики раскрываются, начиная со стартового символа, до получения требуемой последовательности лексем.
-
-•	Восходящий (англ. bottom-up) – это такой такой анализ, в котором продукции восстанавливаются из правых частей, начиная с токенов-лексем и кончая стартовым символом.
-
-Во второй половине 20-го века Джон Брэкус и Ноам Хомски независимо друг от друга создали форму записи, которая в последствии стала методом формального описания синтаксиса языков. 
-Форма Бэкуса-Наура (БНФ) – формальная система описания синтаксиса, используемая для описания контекстно-свободных грамматик, в которой одни синтаксические абсстракции последовательно определяются через другие абстракции. Для описания синтаксических структур форма БНФ исползует абстракции.  
-
-Форма БНФ является порождающим устройством для определения языков. С помощью последовательности правил создаются преждложения языка. Создание предложений называется выводом.
-Вывод должен начинаться с начального символа start symbol. Сентенциальная форма грамматики - это строка, которая может быть выведена из стартового символа. Предложение (сентенция) грамматики - это сентенциальная форма, состоящая только из терминальных символов. Язык L(G) грамматики - это множество всех ее предложений.  
-
-//TODO: РБНФ
-
-Задача построения языка довольна трудозатратная. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов:
+\begin{itemize}
+\itemНисходящий (англ. top-down) – это такой такой анализ, в котором продукции грамматики раскрываются, начиная со стартового символа, до получения требуемой последовательности лексем.
+\itemВосходящий (англ. bottom-up) – это такой такой анализ, в котором продукции восстанавливаются из правых частей, начиная с токенов-лексем и кончая стартовым символом.
+\end{itemize}
 
 
-•	Генераторы лексических анализаторов (сканеров)
-
-•	Генераторы синтаксических анализаторов (парсеров)
-
-•	Автоматические генераторы кода
+Задача построения языка довольна трудозатратная. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
 
 Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форму РБНФ в программу на Java, C++, JavaSript, Go. Python и Go. 
 
@@ -338,6 +403,7 @@ fragment S: [sS];
 
 TODO: описать синтаксические правила шагов и сценария в целом
 
+%-------------------------------Использование грамматики
 \section{    Использование грамматики}
 
 Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. При анализе узлов дерева разбора нужно обращаться к дочерним узлам, соответствующим фрагментам исходного правила. Причем обращаться можно как к отдельным узлам, так и к группам узлов. Следовательно важным условием создания хорошей грамматики является возможность интуитивно простой доступ к любой части правила. ANTLR4 предоставляет такие сущности как альтернативные и элементарные метки. Альтернативные метки позволяют разбить сложное правило на альтернативные фразы и обрабатывать каждую фразу отдельно.  
