разбила структуру что где должно быть описано

--- a/main.tex
+++ b/main.tex
@@ -336,6 +336,22 @@ S – начальный символ грамматики.
 \itemВосходящий (англ. bottom-up) – это такой такой анализ, в котором продукции восстанавливаются из правых частей, начиная с токенов-лексем и кончая стартовым символом.
 \end{itemize}
 
+Нисходящий анализ (метод рекурсивног оспуска) является наиболее эффективным методом синтаксического анализа. В его основе лежит левосторонний разбор строки языка. Исходной сентенциальной формой является начальный символ грамматики, а целевой – заданная строка языка. На каждом шаге разбора правило грамматики применяется к самому левому нетерминалу сентенции. Данный процесс соответствует построению дерева разбора цепочки сверху вниз (от корня к листьям).
+
+\subsection {Семантический анализ}
+В ходе семантического анализа проверяются отдельные правила записи исходных программ, которые не описываются КС-грамматикой. Эти правила носят контекстно-зависимый характер, их называют семантическими соглашениями или контекстными условиями.
+
+
+
+% ------------------------------------------------ГЛАВА Реализационная часть
+\chapter{Реализационная часть}
+\label{cImplementation}
+Рекомендуемый объем главы --- 10-30 стр.
+Название главы должно отражать ее содержание, например ``Архитектура вечного двигателя''.
+В главе должно быть описание этапов разработки технического решения задачи. Следующий пример
+приведен для работ, связанных  с проектированием и реализацией 
+программного продукта.
+
 
 Задача построения языка довольна трудозатратная. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
 
@@ -408,35 +424,16 @@ TODO: описать синтаксические правила шагов и сценария в целом
 
 Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. При анализе узлов дерева разбора нужно обращаться к дочерним узлам, соответствующим фрагментам исходного правила. Причем обращаться можно как к отдельным узлам, так и к группам узлов. Следовательно важным условием создания хорошей грамматики является возможность интуитивно простой доступ к любой части правила. ANTLR4 предоставляет такие сущности как альтернативные и элементарные метки. Альтернативные метки позволяют разбить сложное правило на альтернативные фразы и обрабатывать каждую фразу отдельно.  
 В нашем случае правило инструкции можно разбить на следующие альтервативные метки:  
-%TEST LISTING 
 \lstinputlisting[caption= альтервативные метки синтаксического правила instruction,language=java,  firstline=11, 	 lastline=16 ]{res/BddParser.g4}
-%END TEST LISTING 
-%instruction
-%    : Send  text     #send
-%    | Recieve text   #recieve
-%    | Set text       #set
-%    | Check text     #check
-%    | Pause time     #pause
+
 
 Элементными метками помечаются отдельные нетерминалы или последовательности терминалов. Они предоставляют доступ к содержимому контекста правила в виде поля с заданным именем. Таким образом, вместо вычисления (извлечения) отдельного элемента содержимого некоторого контекста достаточно просто обратиться к такой элементной метке.
 
-
-%--------------------------------------Обработчик ошибок
-\section{    Обработчик ошибок}
-
-В случае, если исходный текст не соотвествует синтаксическим правилам языка, небоходимо корректно реагировать на некорректную цепочу лексем. В этом случае можно завершить синтаксический анализ и вывести сообщение об ошибке, либо попробовать за одну попутку синтаксического анализа найти как можно больше ошибок. 
-
-TODO: описать
-
-\chapter{Реализационная часть}
-\label{cImplementation}
-Рекомендуемый объем главы --- 10-30 стр.
-Название главы должно отражать ее содержание, например ``Архитектура вечного двигателя''.
-В главе должно быть описание этапов разработки технического решения задачи. Следующий пример
-приведен для работ, связанных  с проектированием и реализацией 
-программного продукта.
+%----------------------Архитектура системы
 \section{Архитектура системы}
 Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных  и др.
+
+%------------------------Интерфейс системы
 \section{Интерфейс системы}
 \label{sSpec}
 Интерфейс пользователя, модульная структура, API
@@ -444,6 +441,36 @@ TODO: описать
 Использованные инструментальные средства, приемы программирования, 
 технические решения, связанные с ограничениями аппаратных или программных 
 средств.  
+
+
+%--------------------------------------Обработчик ошибок
+\section{    Обработчик ошибок}
+Важной способностью каждого парсера является обработка ошибок.
+В случае, если исходный текст не соотвествует синтаксическим правилам языка, небоходимо корректно реагировать на некорректную цепочу лексем. В этом случае можно завершить синтаксический анализ и вывести сообщение об ошибке, либо попробовать за одну попутку синтаксического анализа найти как можно больше ошибок. 
+
+%TODO: описать мой обработчик 
+
+В ANTLR существуют следующие типы ошибок парсинга:
+
+ошибка распознавания токена (Lexer no viable alt); единственная существующая лексическая ошибка, обозначающая отсутствие правила для формирования токена из существующей лексемы:
+
+%class # { int i; } — здесь такой лексемой является #.
+
+отсутствующий токен (Missing token); в этом случае ANTLR вставляет в поток токенов отсутствующий токен, помечает, что его не хватает, и продолжает парсинг, как будто он существует.
+
+%class T { int f(x) { a = 3 4 5; } } — здесь такой токен это } в конце;
+
+лишний токен (Extraneous token); ANTLR помечает, что токен ошибочный и продолжает парсинг дальше, как будто он отсутствует: в примере такой токен первая ;
+
+%class T ; { int i; }
+
+несовместимая входная цепочка (Mismatched input); при этом включается «режим паники», цепочка входных токенов игнорируется, а парсер ожидает токена из синхронизирущего множества. В следующем примере игнорируются лексемы 4 и 5, а синхронизирующим токеном является ;
+
+%class T { int f(x) { a = 3 4 5; } }
+
+отсутствующая альтернатива (No viable alternative input); данная ошибка описывает все остальные возможные ошибки парсинга.
+
+%class T { int ; }
 
 
 
@@ -460,29 +487,31 @@ TODO: описать
 
 Для тестирования реализованного языка были разработа Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. 
 
-Ниже представлена спецификация для разработанного синтаксического анализатора и результаты выполнения тестов
-
-
-
-% Please add the following required packages to your document preamble:
-% \usepackage{booktabs}
-% \usepackage{graphicx}
-%\begin{table}[]
-%\resizebox{\textwidth}{!}{%
-%\begin{tabular}{@{}lllll@{}}
-%\begin{tabular}[c]{@{}l@{}}Входной\\ текст\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}Ожидаемое\\ поведение\end{tabular} & Статус    &  &  \\
-%@Pause [erf] ms                                                               & line 1:8 mismatched input 'erf' expecting INTEGER             & выполнено &  &  \\
-%@Pause [] ms                                                                  & line 1:8 missing INTEGER at ']'                               & выполнено &  &  \\
-%\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Pause [] ms\end{tabular}          & line 2:8 missing INTEGER at ']'                               & выполнено &  &  \\
-%\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Send\end{tabular}                 & line 2:6 missing TEXT at '<EOF>'                              & выполнено &  &  \\
-%\begin{tabular}[c]{@{}l@{}}@Pause [2] ms \\ @Send  @Pause [2] ms\end{tabular} & line 2:6 mismatched input '@Pause' expecting TEXT             & выполнено &  & 
-%\end{tabular}%
-%}
-%\end{table}
-
 \lstinputlisting[caption=входные данные для теста testTwoInstructionsInTheSameLine, language=java,  firstline=2,  lastline=8 ]{res/testTwoInstructionsInTheSameLine.txt}
 
 \lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=11,  lastline=19 ]{res/testTwoInstructionsInTheSameLine.txt}
+
+
+Ниже представлена спецификация для разработанного синтаксического анализатора и результаты выполнения тестов
+
+
+%
+% Please add the following required packages to your document preamble:
+% \usepackage{booktabs}
+% \usepackage{graphicx}
+\begin{table}[]
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{@{}lllll@{}}
+\begin{tabular}[c]{@{}l@{}}Входной\\ текст\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}Ожидаемое\\ поведение\end{tabular} & Статус    &  &  \\
+@Pause [erf] ms                                                               & line 1:8 mismatched input 'erf' expecting INTEGER             & выполнено &  &  \\
+@Pause [] ms                                                                  & line 1:8 missing INTEGER at ']'                               & выполнено &  &  \\
+\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Pause [] ms\end{tabular}          & line 2:8 missing INTEGER at ']'                               & выполнено &  &  \\
+\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Send\end{tabular}                 & line 2:6 missing TEXT at '<EOF>'                              & выполнено &  &  \\
+\begin{tabular}[c]{@{}l@{}}@Pause [2] ms \\ @Send  @Pause [2] ms\end{tabular} & line 2:6 mismatched input '@Pause' expecting TEXT             & выполнено &  & 
+\end{tabular}%
+}
+\end{table}
+
 
 
 \section{Примеры применения метода или программы}
